--- a/main.html
+++ b/main.html
@@ -10,8 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1> Why I want to become a developer</h1>
+<h1> Why I want to become a developer?</h1>
 <p>Learning something new pretty much every day. Being challenged every day whether that be a simple bug fix, to something big like a new project. </p>	
 </body>
-
 </html>
