--- a/main.html
+++ b/main.html
@@ -11,6 +11,6 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <h1> Why I want to become a developer?</h1>
-<p>Learning something new pretty much every day. Being challenged every day whether that be a simple bug fix, to something big like a new project. </p>	
+<p>Learning something new pretty much every day.</p>	
 </body>
 </html>
